[tool.poetry]
name = "stakewolle-testing-task"
version = "0.1.0"
description = ""
authors = ["bulatsabirow <bulatsabirow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = {extras = ["sqlalchemy"], version = "^1.13.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pydantic-settings = "^2.2.1"
aioredis = "^2.0.1"
redis = "^5.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
